--- a/Vienna/Interfaces/es.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/es.lproj/FeedCredentials.strings
@@ -5,7 +5,7 @@
 "33.title" = "Nombre:";
 
 /* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
-"34.title" = "El acceso a %@ requiere que proporcione las credenciales de inicio de sesión.";
+"34.title" = "El acceso a %@ requiere que proporcione las credenciales de inicio de sesión";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Contraseña:";
