--- a/Vienna/Interfaces/fr.lproj/InfoWindow.strings
+++ b/Vienna/Interfaces/fr.lproj/InfoWindow.strings
@@ -1,5 +1,5 @@
 /* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
-"105.title" = "Dernier rafraîchissement :";
+"105.title" = "Dernière actualisation :";
 
 /* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
 "109.title" = "Vérifier";
