--- a/Vienna/Interfaces/nl.lproj/EmptyTrashWarning.strings
+++ b/Vienna/Interfaces/nl.lproj/EmptyTrashWarning.strings
@@ -2,7 +2,7 @@
 "17.title" = "Leeg prullenmand";
 
 /* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
-"18.title" = "Annuleer";
+"18.title" = "Leeg prullenmand niet";
 
 /* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Er zijn gewiste artikelen in de prullenmand. Wil je de prullenmand nu legen?";
