--- a/Vienna/Resources/de.lproj/InfoPlist.strings
+++ b/Vienna/Resources/de.lproj/InfoPlist.strings
@@ -2,7 +2,7 @@
 "NSAppleEventsUsageDescription" = "";
 
 /* A label for plug-in bundles. This is shown in Finder's Get Info window, for example. */
-"Vienna plug-in" = "Vienna-Plug-in";
+"Vienna plug-in" = "Vienna-Plug-In";
 
 /* A label for style bundles. This is shown in Finder's Get Info window, for example. */
 "Vienna style" = "Vienna-Stil";
