--- a/Vienna/Resources/es.lproj/InfoPlist.strings
+++ b/Vienna/Resources/es.lproj/InfoPlist.strings
@@ -1,3 +1,6 @@
 /* A message that tells the user why Vienna is requesting the ability to send Apple events. */
 "NSAppleEventsUsageDescription" = "";
 
+/* A label for plug-in bundles. This is shown in Finder's Get Info window, for example. */
+"Vienna plug-in" = "Módulo de Vienna";
+
