--- a/Vienna/Resources/zh-Hant.lproj/Localizable.strings
+++ b/Vienna/Resources/zh-Hant.lproj/Localizable.strings
@@ -4,6 +4,9 @@
 /* No comment provided by engineer. */
 "(Untitled Feed)" = "(未命名訂閱頻道)";
 
+/* Appended to application name in Open With menu */
+"%@ (default)" = "%@ (預設)";
+
 /* No comment provided by engineer. */
 "%@ Info" = "%@ 簡介";
 
@@ -357,6 +360,9 @@
 /* No comment provided by engineer. */
 "Loading" = "載入中";
 
+/* Title of a button on an alert */
+"Locate…" = "找出...";
+
 /* No comment provided by engineer. */
 "Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences. Also check your network access." = "請確認用以存取 Open Reqder 伺服器的帳號與密碼是否有正確地設在 Vienna 的偏好設定中。\\n亦請檢查您的網路可用性。";
 
@@ -408,6 +414,9 @@
 /* No comment provided by engineer. */
 "No new articles available" = "沒有新文章";
 
+/* test for a folder (not operational as of Vienna 3.2) */
+"not under" = "不在裡面";
+
 /* Title of a button on an alert */
 "OK" = "好";
 
@@ -439,6 +448,9 @@
 "Open Link in %@" = "在 %@ 中打開連結";
 
 /* No comment provided by engineer. */
+"Open Link in Background" = "在背景中開啟連結";
+
+/* No comment provided by engineer. */
 "Open Link in New Tab" = "在新標籤頁中打開連結";
 
 /* No comment provided by engineer. */
@@ -458,6 +470,12 @@
 
 /* Title of a menu item */
 "Open Subscription Home Page in External Browser" = "在外部瀏覽器中打開訂閱頻道首頁";
+
+/* No comment provided by engineer. */
+"Open With" = "開啟方式";
+
+/* Name the application which should open a file */
+"Open with %@" = "用 %@ 開啟";
 
 /* No comment provided by engineer. */
 "Other" = "其他";
@@ -483,6 +501,9 @@
 
 /* No comment provided by engineer. */
 "Recents" = "最近記錄";
+
+/* No comment provided by engineer. */
+"Redirection attempt treated as temporary for safety concern" = "基於安全考量，此次重導已被處理。";
 
 /* Title of a menu item */
 "Refresh All Subscriptions" = "重新整理所有訂閱頻道";
@@ -529,6 +550,9 @@
 /* No comment provided by engineer. */
 "RSS Icon not found!" = "找不到圖示。";
 
+/* A formatted URL string with the javascript: URL scheme. */
+"Run script “%@”" = "執行腳本 \"%@\"";
+
 /* Placeholder title of a search field */
 "Search all articles" = "搜尋所有文章";
 
@@ -548,6 +572,12 @@
 
 /* Title of a popup menu item */
 "Select…" = "選取⋯";
+
+/* A formatted URL string with the mailto: URL scheme. */
+"Send email to %@" = "傳送電子郵件給 %@";
+
+/* A formatted URL string with the mailto: URL scheme. */
+"Send email to %@ with subject “%@”" = "傳送電子郵件給 %1$@​，標題為 \"%2$@\"";
 
 /* No comment provided by engineer. */
 "Send Link" = "寄送連結";
@@ -629,6 +659,9 @@
 
 /* No comment provided by engineer. */
 "Trash" = "垃圾桶";
+
+/* test for a folder (not operational as of Vienna 3.2) */
+"under" = "在裡面";
 
 /* No comment provided by engineer. */
 "Unread Articles" = "未讀文章";
